End of Seciton 10

--- a/DatingApp-SPA/src/app/members/memberlist/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/memberlist/member-detail/member-detail.component.html
@@ -42,7 +42,7 @@
             </tab>
             <tab heading="Interest">
               <h4>Intrest</h4>
-              <p>{{user.intrests}}</p>
+              <p>{{user.interests}}</p>
 
             </tab>
             <tab heading="Photos">
